@startuml

!include ../../../commons.style

class Client

interface Command {
  + execute()
}

class Invoker {
  + invoke(c: Command)
}

class Receiver {
  + action()
}

class ConcreteCommand {
  + this(Receiver)
  __
  + execute()
}


Command <|.. ConcreteCommand
Client --> Receiver
Receiver "target" <- ConcreteCommand
Client -> Invoker
Client .. ConcreteCommand
Invoker .. Command

'Command . Invoker
'Command <|.. ConcreteCommand
'Receiver <-- ConcreteCommand

'Client .> ConcreteCommand
'Receiver <-- Client
'Invoker <-- Client

@enduml
